--- a/src/index.pug
+++ b/src/index.pug
@@ -1,25 +1,5 @@
 extends templates/_layout
 block content 
-    mj-section(padding="0 20px" mj-class="bgFsombre")
+    mj-section
         mj-column
-            mj-text(padding="12px 0" align="center" mj-class="cTW0 fw0" font-size="14px" line-height="20px") Having trouble seeing the below email? #[a(style="color:#ffffff" href="#") Click&nbsp;here&nbsp;to&nbsp;view&nbsp;it&nbsp;in&nbsp;your&nbsp;browser]
-    mj-section(padding="0 50px" mj-class="bgFsombre")
-        mj-column
-            mj-divider(padding-top="19px")
-            mj-text(padding="0" padding-top='12px' align="center" font-family="'Montserrat', Arial, Helvetica, sans-serif" mj-class="T30 fw1 lh cTW0" letter-spacing="2px") Own a Beachfront
-            mj-text(padding="0" padding-bottom="15px" align="center" font-family="'Montserrat', Arial, Helvetica, sans-serif" mj-class="T30 fw1 lh cTW0" letter-spacing="2px") Property in Dubai
-            mj-divider
-            mj-text(padding="0" padding-top="18px" padding-bottom="25px" align="center" mj-class="T22 fw0 lh cTW0" text-transform="capitalize") six senses residences - dubai&nbsp;marina
-    mj-section(padding="5px 46px" mj-class="bgFsombre")
-        mj-column(padding="4px" width="33.333333%")
-            mj-text(padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1") 122
-            mj-text(padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize") storey tower 
-        mj-column(padding="4px" width="33.333333%")
-            mj-text(padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1") 10#[span(style="font-size:26px;font-weight:400") %]
-            mj-text(padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize") rental
-        mj-column(padding="4px" width="33.333333%")
-            mj-text(padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1") 20-80
-            mj-text(padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize") payment plan
-    mj-section(padding="0" mj-class="bgFsombre")
-        mj-column(padding="60px 8.333333%" padding-top="20px" width="100%")
-            mj-button(width="70%") Register your interest
+            mj-text Pour consulter la version en ligne, cliquez ici
