--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -43,58 +43,19 @@
       <mj-button padding="0" inner-padding="14px 25px" font-family="'Montserrat', Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="18px" color="#ffffff" background-color="#9a7800" letter-spacing="3.5px" text-transform="uppercase" border-radius="0"></mj-button>
     </mj-attributes>
     <mj-breakpoint width="480px"></mj-breakpoint>
-    <mj-style>
-      @media only screen and (max-width:480px) {
-      .desktop-only td {
-          display: none !important;
-          mso-hide: all !important; /* Outlook */
-          }
-      .center div{
-          text-align: center !important;
-      }
-      .padding div{
-          padding-left: 30px !important;
-          padding-right: 50px !important;
-      }
-      .form td{
-          padding-left: 11px !important;
-          padding-right: 11px !important;
-      }
-      }
-    </mj-style>
   </mj-head>
   <mj-body background-color="#ffffff" width="600px">
-    <mj-section padding="0 20px" mj-class="bgFsombre">
+    <mj-section>
       <mj-column>
-        <mj-text padding="12px 0" align="center" mj-class="cTW0 fw0" font-size="14px" line-height="20px">Having trouble seeing the below email? <a style="color:#ffffff" href="#">Click&nbsp;here&nbsp;to&nbsp;view&nbsp;it&nbsp;in&nbsp;your&nbsp;browser</a></mj-text>
+        <mj-text>Pour consulter la version en ligne, cliquez ici</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section padding="0 50px" mj-class="bgFsombre">
+    <mj-section>
       <mj-column>
-        <mj-divider padding-top="19px"></mj-divider>
-        <mj-text padding="0" padding-top="12px" align="center" font-family="'Montserrat', Arial, Helvetica, sans-serif" mj-class="T30 fw1 lh cTW0" letter-spacing="2px">Own a Beachfront</mj-text>
-        <mj-text padding="0" padding-bottom="15px" align="center" font-family="'Montserrat', Arial, Helvetica, sans-serif" mj-class="T30 fw1 lh cTW0" letter-spacing="2px">Property in Dubai</mj-text>
-        <mj-divider></mj-divider>
-        <mj-text padding="0" padding-top="18px" padding-bottom="25px" align="center" mj-class="T22 fw0 lh cTW0" text-transform="capitalize">six senses residences - dubai&nbsp;marina</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="5px 46px" mj-class="bgFsombre">
-      <mj-column padding="4px" width="33.333333%">
-        <mj-text padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1">122</mj-text>
-        <mj-text padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize">storey tower </mj-text>
-      </mj-column>
-      <mj-column padding="4px" width="33.333333%">
-        <mj-text padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1">10<span style="font-size:26px;font-weight:400">%</span></mj-text>
-        <mj-text padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize">rental</mj-text>
-      </mj-column>
-      <mj-column padding="4px" width="33.333333%">
-        <mj-text padding="0" padding-top="14px" align="center" mj-class="T36 fw2 cbgContainer cTW+1">20-80</mj-text>
-        <mj-text padding="0" padding-bottom="18px" align="center" mj-class="T15 fw0 cbgContainer cTW+2" text-transform="capitalize">payment plan</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0" mj-class="bgFsombre">
-      <mj-column padding="60px 8.333333%" padding-top="20px" width="100%">
-        <mj-button width="70%">Register your interest</mj-button>
+        <mj-text>Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.</mj-text>
+        <mj-text>Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.</mj-text>
+        <mj-text>Cliquez ici pous vous désabonner</mj-text>
+        <mj-text>© 2025 Supveto</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
