mise au point du gulpfile et du package.json

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,4 +2,4 @@ extends templates/_layout
 block content 
     mj-section
         mj-column
-            mj-text Pour consulter la version en ligne, cliquez ici
+            mj-text(align="center") Pour consulter la version en ligne, cliquez ici
