mettre en place des images et du texte

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,4 +1,9 @@
 mj-section
+    mj-column(width="100%")
+        mj-image(align="center")
+    mj-column(width="100%")
+        mj-image(align="center")
+mj-section
     mj-column
         mj-text(align="center") Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.
         mj-text(align="center") Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.
