--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -52,6 +52,26 @@
     </mj-section>
     <mj-section>
       <mj-column>
+        <mj-image></mj-image>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-text>Jeu Concours 2025</mj-text>
+        <mj-text>Photo de Noël</mj-text>
+        <mj-text>A envoyer avant le 4 janvier 2026</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column width="100%">
+        <mj-image align="center"></mj-image>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-image align="center"></mj-image>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column>
         <mj-text align="center">Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.</mj-text>
         <mj-text align="center">Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.</mj-text>
         <mj-text align="center">Cliquez ici pous vous désabonner</mj-text>
