--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -50,12 +50,12 @@ mjml
     mj-body(background-color='#ffffff' width="600px")
         //- content
         block content
-        //- bloc presentation
-            block offre
-            include ../../dubaiThree/src/includes/_presentation
-        //- bloc détails
-            block details
-            include ../../dubaiTwo/src/includes/_two
+        //- bloc header
+        block header
+            include ../includes/_header
+        //- bloc core
+        block core
+            include ../includes/_core
         //-bloc footer
         block footer
             include ../includes/_footer
