mettre du style dans le bloc core

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -3,6 +3,6 @@ mj-section
         mj-image
 mj-section
     mj-column
-        mj-text Jeu Concours 2025
-        mj-text Photo de Noël
-        mj-text A envoyer avant le 4 janvier 2026
+        mj-text(align="center") Jeu Concours 2025
+        mj-text(align="center") Photo de Noël
+        mj-text(align="center") A envoyer avant le 4 janvier 2026
