mise en place des images

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,8 +1,9 @@
-mj-section
+mj-section(padding="0" background-color="#ffffff")
     mj-column(width="100%")
-        mj-image(align="center")
+        mj-image(padding="0" align="center" width="600px" src="images/basImage12025.png" alt="Lapin, perroquet, cheval et serpent avec un chapeau de noël dans un cadre instagram")
+mj-section(padding="0" background-color="#37A943")
     mj-column(width="100%")
-        mj-image(align="center")
+        mj-image(padding="0" align="center")
 mj-section
     mj-column
         mj-text(align="center") Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.
