--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,7 +1,7 @@
-mj-section
-    mj-column
-        mj-image
-mj-section
+mj-section(padding="0")
+    mj-column(width="100%")
+        mj-image(padding="0" align="center" width="600px" src="images/hautImage12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël")
+mj-section(padding="0" background-color="#ffffff")
     mj-column
         mj-text(align="center") Jeu Concours 2025
         mj-text(align="center") Photo de Noël
