--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -50,12 +50,12 @@
         <mj-text align="center">Pour consulter la version en ligne, cliquez ici</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section>
-      <mj-column>
-        <mj-image></mj-image>
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-image padding="0" align="center" width="600px" src="images/hautImage12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël"></mj-image>
       </mj-column>
     </mj-section>
-    <mj-section>
+    <mj-section padding="0" background-color="#ffffff">
       <mj-column>
         <mj-text align="center">Jeu Concours 2025</mj-text>
         <mj-text align="center">Photo de Noël</mj-text>
@@ -70,12 +70,14 @@
         <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">C’est l’occasion de partager un moment de complicité, de diffuser de la bonne humeur autour de toi et de tenter de gagner le concours national Sup-Véto. Alors {{contact.PRENOM}}, montre ton imagination et fais de ton animal le roi de Noël. </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section>
+    <mj-section padding="0" background-color="#ffffff">
       <mj-column width="100%">
-        <mj-image align="center"></mj-image>
+        <mj-image padding="0" align="center" width="600px" src="images/basImage12025.png" alt="Lapin, perroquet, cheval et serpent avec un chapeau de noël dans un cadre instagram"></mj-image>
       </mj-column>
+    </mj-section>
+    <mj-section padding="0" background-color="#37A943">
       <mj-column width="100%">
-        <mj-image align="center"></mj-image>
+        <mj-image padding="0" align="center"></mj-image>
       </mj-column>
     </mj-section>
     <mj-section>
