mettre en place les textes réglementaire

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -4,9 +4,9 @@ mj-section(padding="0" background-color="#ffffff")
 mj-section(padding="0" background-color="#37A943")
     mj-column(width="100%")
         mj-image(padding="0" align="center")
-mj-section
-    mj-column
-        mj-text(align="center") Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.
-        mj-text(align="center") Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.
-        mj-text(align="center") Cliquez ici pous vous désabonner
-        mj-text(align="center") © 2025 Supveto
+mj-section(padding="20px")
+    mj-column(width="420px")
+        mj-text(padding="0" align="center" mj-class="T12 cTW3") Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette information car vous vous êtes inscrit sur Supveto.
+        mj-text(padding="0" align="center" mj-class="T12 cTW3") Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.
+        mj-text(padding="0" align="center" mj-class="T12 cTW3") Cliquez ici pous vous désabonner
+        mj-text(padding="20px 0" align="center" mj-class="T12 cTW3") © 2025 Supveto
