--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,5 @@
 extends templates/_layout
 block content 
-    mj-section
+    mj-section(padding="0 20px")
         mj-column
-            mj-text(align="center") Pour consulter la version en ligne, cliquez ici
+            mj-text(align="center" mj-class="T12 cTW3") Pour consulter la version en ligne, cliquez ici
