--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -24,15 +24,15 @@
       <mj-class name="T36" font-style="normal" font-size="36px" line-height="46px"/>
       <mj-class name="T18" font-style="normal" font-size="18px" line-height="24px"/>
       <mj-class name="T16" font-style="normal" font-size="16px" line-height="24px"/>
-      <mj-class name="T12" font-style="normal" font-size="12px" line-height="18px"/>
+      <mj-class name="T12" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="12px" font-weight="400" line-height="18px"/>
       <mj-class name="fw0" font-weight="400"/>
       <mj-class name="fw1" font-weight="600"/>
       <mj-class name="fw2" font-weight="700"/>
       <mj-class name="lh" line-height="1.2"/>
       <mj-class name="cTW0" color="#ffffff"/>
-      <mj-class name="cTW+1" color="#EEF1F5"/>
-      <mj-class name="cTW+2" color="#DEE2E5"/>
-      <mj-class name="cTW+3" color="#666666"></mj-class>
+      <mj-class name="cTW1" color="#EEF1F5"/>
+      <mj-class name="cTW2" color="#DEE2E5"/>
+      <mj-class name="cTW3" color="#666666"></mj-class>
       <mj-class name="cTB" color="#000000"></mj-class>
       <mj-class name="cbgContainer" container-background-color="#5A5656"/>
       <mj-class name="bgFsombre" background-color="#212121"/>
@@ -45,9 +45,9 @@
     <mj-breakpoint width="480px"></mj-breakpoint>
   </mj-head>
   <mj-body background-color="#f6f6f6" width="600px">
-    <mj-section>
+    <mj-section padding="0 20px">
       <mj-column>
-        <mj-text align="center">Pour consulter la version en ligne, cliquez ici</mj-text>
+        <mj-text align="center" mj-class="T12 cTW3">Pour consulter la version en ligne, cliquez ici</mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="0">
@@ -80,12 +80,12 @@
         <mj-image padding="0" align="center"></mj-image>
       </mj-column>
     </mj-section>
-    <mj-section>
-      <mj-column>
-        <mj-text align="center">Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette nformation car vous vous êtes inscrit sur Supveto.</mj-text>
-        <mj-text align="center">Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.</mj-text>
-        <mj-text align="center">Cliquez ici pous vous désabonner</mj-text>
-        <mj-text align="center">© 2025 Supveto</mj-text>
+    <mj-section padding="20px">
+      <mj-column width="420px">
+        <mj-text padding="0" align="center" mj-class="T12 cTW3">Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette information car vous vous êtes inscrit sur Supveto.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T12 cTW3">Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T12 cTW3">Cliquez ici pous vous désabonner</mj-text>
+        <mj-text padding="20px 0" align="center" mj-class="T12 cTW3">© 2025 Supveto</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
