--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -24,7 +24,7 @@ mjml
             mj-class(name='T36' font-style="normal" font-size='36px' line-height="46px")/
             mj-class(name='T18' font-style="normal" font-size='18px' line-height="24px")/
             mj-class(name='T16' font-style="normal" font-size='16px' line-height="24px")/
-            mj-class(name='T12' font-style="normal" font-size='12px' line-height="18px")/
+            mj-class(name='T12' font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size='12px' font-weight="400" line-height="18px")/
             //- font-weight
             mj-class(name="fw0" font-weight="400")/
             mj-class(name="fw1" font-weight="600")/
@@ -33,9 +33,9 @@ mjml
             mj-class(name="lh" line-height="1.2")/
             //- color
             mj-class(name="cTW0" color="#ffffff")/
-            mj-class(name="cTW+1" color="#EEF1F5")/
-            mj-class(name="cTW+2" color="#DEE2E5")/
-            mj-class(name="cTW+3" color="#666666")
+            mj-class(name="cTW1" color="#EEF1F5")/
+            mj-class(name="cTW2" color="#DEE2E5")/
+            mj-class(name="cTW3" color="#666666")
             mj-class(name="cTB" color="#000000")
             mj-class(name="cbgContainer" container-background-color="#5A5656")/
             mj-class(name="bgFsombre" background-color="#212121")/
