ajout du logo Supveto

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,9 +1,9 @@
 mj-section(padding="0" background-color="#ffffff")
     mj-column(width="100%")
-        mj-image(padding="0" align="center" width="600px" src="images/basImage12025.png" alt="Lapin, perroquet, cheval et serpent avec un chapeau de noël dans un cadre instagram")
-mj-section(padding="0" background-color="#37A943")
-    mj-column(width="100%")
-        mj-image(padding="0" align="center")
+        mj-image(padding="0" align="center" width="600px" src="images/basImage12025.png" alt="Lapin, perroquet, cheval et serpent avec un chapeau de noël dans un cadre instagram")/
+mj-section(padding="20px" padding-bottom="40px" background-color="#008d36")
+    mj-column
+        mj-image(padding="0" align="center" width="200px" src="images/logoSupveto.png" alt="logotype de Supveto")/
 mj-section(padding="20px")
     mj-column(width="420px")
         mj-text(padding="0" align="center" mj-class="T12 cTW3") Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette information car vous vous êtes inscrit sur Supveto.
