travail sur le titre

--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -2,8 +2,8 @@ mjml
     //- Head
     mj-head
         mj-title Lancement du jeu concours 2025
-        mj-font(name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap")/
-        mj-font(name="Montserrat" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap")/
+        mj-font(name="Open Sans" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap")/
+        mj-font(name="Cookie" href="https://fonts.googleapis.com/css2?family=Cookie&display=swap")/
         mj-raw.
             <meta charset="UTF-8">
             <meta name='color-scheme' content='light'/>
@@ -13,8 +13,7 @@ mjml
             <meta name="format-detection" content="address=no"/>
             <meta name="format-detection" content="email=no"/>
         mj-attributes
-            mj-all(font-family="'Roboto', Arial, Helvetica, sans-serif")/
-            mj-class(name='T36' font-style="normal" font-size="36px")/
+            mj-all(font-family="'Open Sans', Arial, Helvetica, sans-serif")/
             mj-class(name='T30' font-style="normal" font-size="30px")/
             mj-class(name='T22' font-style="normal" font-size="22px")/
             mj-class(name='T15' font-style="normal" font-size="15px")/
