--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,8 +1,9 @@
 mj-section(padding="0")
     mj-column(width="100%")
         mj-image(padding="0" align="center" width="600px" src="images/hautImage12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël")
-mj-section(padding="0" background-color="#ffffff")
+mj-section(padding="0 20px" background-color="#ffffff")
     mj-column
-        mj-text(align="center") Jeu Concours 2025
-        mj-text(align="center") Photo de Noël
-        mj-text(align="center") A envoyer avant le 4 janvier 2026
+        mj-text(padding="0" align="center" font-size="22px" line-height="22px" font-weight="700" color="#a50c11") Jeu Concours 2025
+        mj-spacer(height="20px")
+        mj-text(padding="0" align="center" font-family="'Cookie', cursive" font-size="120px" line-height="60px" color="#B50000") Photo#[span(style="font-size:40px;") de]Noël
+        mj-text(padding="0" align="center" font-size="18px" line-height="18px" font-weight="500" color="#098855") À envoyer avant le 4 janvier 2026
