--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -2,8 +2,8 @@
 <mjml>
   <mj-head>
     <mj-title>Lancement du jeu concours 2025</mj-title>
-    <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&amp;display=swap"/>
-    <mj-font name="Montserrat" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap"/>
+    <mj-font name="Open Sans" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&amp;display=swap"/>
+    <mj-font name="Cookie" href="https://fonts.googleapis.com/css2?family=Cookie&amp;display=swap"/>
     <mj-raw>
       <meta charset="UTF-8">
       <meta name='color-scheme' content='light'/>
@@ -14,8 +14,7 @@
       <meta name="format-detection" content="email=no"/>
     </mj-raw>
     <mj-attributes>
-      <mj-all font-family="'Roboto', Arial, Helvetica, sans-serif"/>
-      <mj-class name="T36" font-style="normal" font-size="36px"/>
+      <mj-all font-family="'Open Sans', Arial, Helvetica, sans-serif"/>
       <mj-class name="T30" font-style="normal" font-size="30px"/>
       <mj-class name="T22" font-style="normal" font-size="22px"/>
       <mj-class name="T15" font-style="normal" font-size="15px"/>
@@ -47,7 +46,7 @@
   <mj-body background-color="#f6f6f6" width="600px">
     <mj-section padding="0 20px">
       <mj-column>
-        <mj-text align="center" mj-class="T12 cTW3">Pour consulter la version en ligne, cliquez ici</mj-text>
+        <mj-text align="center" mj-class="T12 cTW3">Pour consulter la version en ligne, <a style="color:#666666;" href="{{mirror}}">cliquez&nbsp;ici</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="0">
@@ -55,19 +54,20 @@
         <mj-image padding="0" align="center" width="600px" src="images/hautImage12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël"></mj-image>
       </mj-column>
     </mj-section>
-    <mj-section padding="0" background-color="#ffffff">
+    <mj-section padding="0 20px" background-color="#ffffff">
       <mj-column>
-        <mj-text align="center">Jeu Concours 2025</mj-text>
-        <mj-text align="center">Photo de Noël</mj-text>
-        <mj-text align="center">A envoyer avant le 4 janvier 2026</mj-text>
+        <mj-text padding="0" align="center" font-size="22px" line-height="22px" font-weight="700" color="#a50c11">Jeu Concours 2025</mj-text>
+        <mj-spacer height="20px"></mj-spacer>
+        <mj-text padding="0" align="center" font-family="'Cookie', cursive" font-size="120px" line-height="60px" color="#B50000">Photo<span style="font-size:40px;">de</span>Noël</mj-text>
+        <mj-text padding="0" align="center" font-size="18px" line-height="18px" font-weight="500" color="#098855">À envoyer avant le 4 janvier 2026</mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="30px" background-color="#ffffff">
       <mj-column>
-        <mj-text padding="0" mj-class="T16 fw0" color="#212121">Tu veux que ton animal devienne la star des fêtes&nbsp;? Sup-Véto lance son concours photo de Noël&nbsp;!</mj-text>
-        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">Habille ton compagnon avec un accessoire ou un déguisement festif, ajoute une touche d’humour et de créativité, et prends la photo la plus joyeuse de l’année. Tu peux être sur la photo ou laisser ton animal briller seul, mais n’oublie jamais&nbsp;: le respect et le bien-être de ton compagnon passent avant tout.</mj-text>
-        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">Pour participer, envoie une seule photo par mail à concours.noel2025@supveto.com, en précisant ton nom, ton prénom et ton école Sup-Véto.</mj-text>
-        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">C’est l’occasion de partager un moment de complicité, de diffuser de la bonne humeur autour de toi et de tenter de gagner le concours national Sup-Véto. Alors {{contact.PRENOM}}, montre ton imagination et fais de ton animal le roi de Noël. </mj-text>
+        <mj-text padding="0" mj-class="T16 fw0" color="#212121">Tu veux que ton animal devienne la star des fêtes&nbsp;? <span style="font-weight:700;">Sup-Véto lance son concours photo de Noël&nbsp;!</span></mj-text>
+        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">Habille ton compagnon avec un accessoire ou un déguisement festif, ajoute une touche d’humour et de créativité, et <span style="font-weight:700;">prends la photo la plus joyeuse de l’année</span>. Tu peux être sur la photo ou laisser ton animal briller seul, mais n’oublie jamais&nbsp;: <span style="font-weight:700">le respect et le bien-être de ton compagnon passent avant tout</span>.</mj-text>
+        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121"><span style="font-weight:700;">Pour participer</span>, envoie une seule photo par mail à <a style="font-weight:700;color:#B50000" href="mailto:concours.noel2025@supveto.com">concours.noel2025@supveto.com</a>, en précisant ton nom, ton prénom et ton école <span style="font-weight:700">Sup-Véto</span>.</mj-text>
+        <mj-text padding="0" padding-top="15px" mj-class="T16 fw0" color="#212121">C’est l’occasion de partager un moment de complicité, de diffuser de la bonne humeur autour de toi et de tenter de gagner le concours national Sup-Véto. Alors <span style="font-weight:700;">{{contact.PRENOM}}, montre ton imagination et fais de ton animal le roi de Noël</span>. </mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="0" background-color="#ffffff">
