--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -81,10 +81,9 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column width="420px">
-        <mj-text padding="0" align="center" mj-class="T12 cTW3">Cet e-mail a été envoyé à {{ contact.EMAIL }}. Vous recevez cette information car vous vous êtes inscrit sur Supveto.</mj-text>
-        <mj-text padding="0" align="center" mj-class="T12 cTW3">Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter contact@supveto.fr à votre carnet d'adresses.</mj-text>
-        <mj-text padding="0" align="center" mj-class="T12 cTW3">Cliquez ici pous vous désabonner</mj-text>
-        <mj-text padding="20px 0" align="center" mj-class="T12 cTW3">© 2025 Supveto</mj-text>
+        <mj-text padding="0" align="center" mj-class="T12 cTW3">Cet e-mail a été envoyé à <a style="color:#666666;text-decoration:none;">{{ contact.EMAIL }}</a>. Vous recevez cette information car vous vous êtes inscrit sur Sup-Véto. Pour être sûr(e) de recevoir tous nos emails, nous vous conseillons d'ajouter <a style="color:#666666;text-decoration:none;" htref="mailto:contact@supveto.fr">contact@supveto.fr</a> à votre carnet d'adresses.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T12 cTW3"><a style="color:#666666" href="{{ unsubscribe }}">Cliquez&nbsp;ici</a> pous vous désabonner</mj-text>
+        <mj-text padding="20px 0" align="center" mj-class="T12 cTW3">© 2025 Sup-Véto</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
