--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -45,6 +45,17 @@ mjml
             mj-divider(padding="0" border-style="solid" border-width="1px" border-color="#eeeeee")
             mj-button(padding="0" inner-padding="14px 25px" font-family="'Montserrat', Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="18px" color="#ffffff" background-color="#9a7800" letter-spacing="3.5px" text-transform="uppercase" border-radius="0")
         mj-breakpoint(width="480px")
+        mj-style.
+            @media only screen and (max-width:440px) {
+                .hide-on-mobile {
+                    display: none !important;
+                    mso-hide: all; /* Outlook hack */
+                }
+                .lh-120 {
+                    line-height: 80px !important; 
+                    mso-line-height-rule: exactly; /* Outlook hack */
+                }
+                }
     //- Body
     mj-body(background-color='#f6f6f6' width="600px")
         //- content
