finalisation du responsive

--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -15,19 +15,14 @@
     </mj-raw>
     <mj-attributes>
       <mj-all font-family="'Open Sans', Arial, Helvetica, sans-serif"/>
-      <mj-class name="T30" font-style="normal" font-size="30px"/>
-      <mj-class name="T22" font-style="normal" font-size="22px"/>
-      <mj-class name="T15" font-style="normal" font-size="15px"/>
-      <mj-class name="T14" font-style="normal" font-size="14px"/>
       <mj-class name="T60" font-style="normal" font-size="60px" line-height="68px"/>
-      <mj-class name="T36" font-style="normal" font-size="36px" line-height="46px"/>
+      <mj-class name="T22" font-style="normal" font-size="22px"/>
       <mj-class name="T18" font-style="normal" font-size="18px" line-height="24px"/>
       <mj-class name="T16" font-style="normal" font-size="16px" line-height="24px"/>
       <mj-class name="T12" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="12px" font-weight="400" line-height="18px"/>
       <mj-class name="fw0" font-weight="400"/>
       <mj-class name="fw1" font-weight="600"/>
       <mj-class name="fw2" font-weight="700"/>
-      <mj-class name="lh" line-height="1.2"/>
       <mj-class name="cTW0" color="#ffffff"/>
       <mj-class name="cTW1" color="#EEF1F5"/>
       <mj-class name="cTW2" color="#DEE2E5"/>
@@ -38,12 +33,10 @@
       <mj-class name="bgFclair" background-color="#eaeaea"/>
       <mj-class name="bgV" background-color="#00412b"/>
       <mj-class name="bgV+2" background-color="#002b1c"/>
-      <mj-divider padding="0" border-style="solid" border-width="1px" border-color="#eeeeee"></mj-divider>
-      <mj-button padding="0" inner-padding="14px 25px" font-family="'Montserrat', Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="18px" color="#ffffff" background-color="#9a7800" letter-spacing="3.5px" text-transform="uppercase" border-radius="0"></mj-button>
     </mj-attributes>
     <mj-breakpoint width="480px"></mj-breakpoint>
     <mj-style>
-      @media only screen and (max-width:440px) {
+      @media only screen and (max-width:480px) {
           .hide-on-mobile {
               display: none !important;
               mso-hide: all; /* Outlook hack */
@@ -67,13 +60,17 @@
       </mj-column>
     </mj-section>
     <mj-section padding="0 20px" background-color="#ffffff">
-      <mj-column>
-        <mj-text padding="0" padding-bottom="30px" align="center" font-size="22px" line-height="22px" font-weight="700" color="#a50c11">Jeu Concours 2025</mj-text>
-        <mj-text padding="0" align="center" font-family="'Cookie', cursive" font-size="120px" color="#B50000"> 
+      <mj-column width="100%" padding-bottom="20px">
+        <mj-text padding="0" align="center" mj-class="T22 fw2" line-height="22px" color="#a50c11">Jeu Concours 2025</mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text padding="0" align="center" font-family="'Cookie', cursive" font-size="120px" line-height="60px" color="#B50000"> 
           <div class="lh-120">
-             Photo <span class="hide-on-mobile" style="display:inline-block;vertical-align:8px;font-size:40px;line-height:0">de</span>Noël</div>
+             Photo<span class="hide-on-mobile" style="display:inline-block;vertical-align:8px;font-size:40px;line-height:0">de</span>Noël</div>
         </mj-text>
-        <mj-text padding="0" padding-top="15px" align="center" font-size="18px" line-height="24px" font-weight="500" color="#098855">À envoyer avant le 4&nbsp;janvier&nbsp;2026</mj-text>
+      </mj-column>
+      <mj-column width="100%" padding-top="10px">
+        <mj-text padding="0" align="center" font-size="18px" line-height="24px" font-weight="500" color="#098855">À envoyer avant le 4&nbsp;janvier&nbsp;2026</mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="30px" background-color="#ffffff">
