--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,6 +1,6 @@
 mj-section(padding="0")
     mj-column(width="100%")
-        mj-image(padding="0" align="center" width="600px" src="images/hautImage12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël")
+        mj-image(padding="0" align="center" width="600px" src="https://i.ibb.co/mrYX8Hdt/haut-Image12025.png" alt="chat et chien jouent dans la neige sur un fond rouge de noël")
 mj-section(padding="0 20px" background-color="#ffffff")
     mj-column(width="100%" padding-bottom="20px")
         mj-text(padding="0" align="center" mj-class="T22 fw2" line-height="22px" color="#a50c11") Jeu Concours 2025
