correction du titre

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -7,6 +7,7 @@ mj-section(padding="0 20px" background-color="#ffffff")
     mj-column(width="100%")
         mj-text(padding="0" align="center" font-family="'Cookie', cursive" font-size="120px" line-height="60px" color="#B50000") 
             div.lh-120 
-                | Photo#[span.hide-on-mobile(style="display:inline-block;vertical-align:8px;font-size:40px;line-height:0") de]Noël
+                | Photo #[span.hide-on-mobile(style="display:inline-block;vertical-align:8px;font-size:40px;line-height:0") de] #[span.nowrap() Noël]
     mj-column(width="100%" padding-top="10px")
-        mj-text(padding="0" align="center" font-size="18px" line-height="24px" font-weight="500" color="#098855") À envoyer avant le 4&nbsp;janvier&nbsp;2026
+        mj-text(padding="0" align="center" font-size="18px" line-height="24px" font-weight="700" color="#098855") À envoyer avant le 4&nbsp;janvier&nbsp;2026
+        mj-text(padding="0" align="center" font-size="18px" line-height="24px" font-weight="500" color="#098855") Cartes cadeaux à gagner !!!
