--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -42,6 +42,9 @@ mjml
                     display: none !important;
                     mso-hide: all; /* Outlook hack */
                 }
+                .nowrap { 
+                    white-space:nowrap;}
+
                 .lh-120 {
                     line-height: 80px !important; 
                     mso-line-height-rule: exactly; /* Outlook hack */
